# server-absen

./: .gitignore  app.py  before_commit.sh  main.py  pyproject.toml  requirements.txt  reset_migration.sh
server_absen/: __init__.py  api.py  config.py  model.py  seeders.py
server_absen/templates/: layout.jinja  test.jinja
